add some feature

--- a/tm88_dev.ioc
+++ b/tm88_dev.ioc
@@ -3,12 +3,14 @@ Dma.Request0=USART1_RX
 Dma.Request1=USART1_TX
 Dma.Request2=USART2_RX
 Dma.Request3=USART2_TX
-Dma.RequestsNb=4
+Dma.Request4=USART3_RX
+Dma.Request5=USART3_TX
+Dma.RequestsNb=6
 Dma.USART1_RX.0.Direction=DMA_PERIPH_TO_MEMORY
 Dma.USART1_RX.0.Instance=DMA1_Channel5
 Dma.USART1_RX.0.MemDataAlignment=DMA_MDATAALIGN_BYTE
 Dma.USART1_RX.0.MemInc=DMA_MINC_ENABLE
-Dma.USART1_RX.0.Mode=DMA_NORMAL
+Dma.USART1_RX.0.Mode=DMA_CIRCULAR
 Dma.USART1_RX.0.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
 Dma.USART1_RX.0.PeriphInc=DMA_PINC_DISABLE
 Dma.USART1_RX.0.Priority=DMA_PRIORITY_LOW
@@ -26,7 +28,7 @@ Dma.USART2_RX.2.Direction=DMA_PERIPH_TO_MEMORY
 Dma.USART2_RX.2.Instance=DMA1_Channel6
 Dma.USART2_RX.2.MemDataAlignment=DMA_MDATAALIGN_BYTE
 Dma.USART2_RX.2.MemInc=DMA_MINC_ENABLE
-Dma.USART2_RX.2.Mode=DMA_NORMAL
+Dma.USART2_RX.2.Mode=DMA_CIRCULAR
 Dma.USART2_RX.2.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
 Dma.USART2_RX.2.PeriphInc=DMA_PINC_DISABLE
 Dma.USART2_RX.2.Priority=DMA_PRIORITY_LOW
@@ -40,6 +42,24 @@ Dma.USART2_TX.3.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
 Dma.USART2_TX.3.PeriphInc=DMA_PINC_DISABLE
 Dma.USART2_TX.3.Priority=DMA_PRIORITY_LOW
 Dma.USART2_TX.3.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority
+Dma.USART3_RX.4.Direction=DMA_PERIPH_TO_MEMORY
+Dma.USART3_RX.4.Instance=DMA1_Channel3
+Dma.USART3_RX.4.MemDataAlignment=DMA_MDATAALIGN_BYTE
+Dma.USART3_RX.4.MemInc=DMA_MINC_ENABLE
+Dma.USART3_RX.4.Mode=DMA_CIRCULAR
+Dma.USART3_RX.4.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+Dma.USART3_RX.4.PeriphInc=DMA_PINC_DISABLE
+Dma.USART3_RX.4.Priority=DMA_PRIORITY_LOW
+Dma.USART3_RX.4.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority
+Dma.USART3_TX.5.Direction=DMA_MEMORY_TO_PERIPH
+Dma.USART3_TX.5.Instance=DMA1_Channel2
+Dma.USART3_TX.5.MemDataAlignment=DMA_MDATAALIGN_BYTE
+Dma.USART3_TX.5.MemInc=DMA_MINC_ENABLE
+Dma.USART3_TX.5.Mode=DMA_NORMAL
+Dma.USART3_TX.5.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+Dma.USART3_TX.5.PeriphInc=DMA_PINC_DISABLE
+Dma.USART3_TX.5.Priority=DMA_PRIORITY_LOW
+Dma.USART3_TX.5.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority
 FREERTOS.Events01=myEvent01,Dynamic,NULL
 FREERTOS.IPParameters=Tasks01,Events01,configTOTAL_HEAP_SIZE
 FREERTOS.Tasks01=defaultTask,24,128,StartDefaultTask,Default,NULL,Dynamic,NULL,NULL
@@ -55,29 +75,56 @@ Mcu.IP2=NVIC
 Mcu.IP3=RCC
 Mcu.IP4=RTC
 Mcu.IP5=SYS
-Mcu.IP6=USART1
-Mcu.IP7=USART2
-Mcu.IPNb=8
+Mcu.IP6=TIM3
+Mcu.IP7=USART1
+Mcu.IP8=USART2
+Mcu.IP9=USART3
+Mcu.IPNb=10
 Mcu.Name=STM32F103C(8-B)Tx
 Mcu.Package=LQFP48
 Mcu.Pin0=PC13-TAMPER-RTC
-Mcu.Pin1=PA2
-Mcu.Pin10=VP_SYS_VS_tim1
-Mcu.Pin2=PA3
-Mcu.Pin3=PA9
-Mcu.Pin4=PA10
-Mcu.Pin5=VP_FREERTOS_VS_CMSIS_V2
-Mcu.Pin6=VP_RTC_VS_RTC_Activate
-Mcu.Pin7=VP_RTC_VS_RTC_Calendar
-Mcu.Pin8=VP_RTC_No_RTC_Output
-Mcu.Pin9=VP_SYS_VS_ND
-Mcu.PinsNb=11
+Mcu.Pin1=PC14-OSC32_IN
+Mcu.Pin10=PA7
+Mcu.Pin11=PB0
+Mcu.Pin12=PB1
+Mcu.Pin13=PB2
+Mcu.Pin14=PB10
+Mcu.Pin15=PB11
+Mcu.Pin16=PB15
+Mcu.Pin17=PA8
+Mcu.Pin18=PA9
+Mcu.Pin19=PA10
+Mcu.Pin2=PC15-OSC32_OUT
+Mcu.Pin20=PA11
+Mcu.Pin21=PA12
+Mcu.Pin22=PA13
+Mcu.Pin23=PA14
+Mcu.Pin24=PB4
+Mcu.Pin25=PB5
+Mcu.Pin26=PB9
+Mcu.Pin27=VP_FREERTOS_VS_CMSIS_V2
+Mcu.Pin28=VP_RTC_VS_RTC_Activate
+Mcu.Pin29=VP_RTC_VS_RTC_Calendar
+Mcu.Pin3=PD0-OSC_IN
+Mcu.Pin30=VP_RTC_No_RTC_Output
+Mcu.Pin31=VP_SYS_VS_ND
+Mcu.Pin32=VP_SYS_VS_tim1
+Mcu.Pin33=VP_TIM3_VS_ClockSourceINT
+Mcu.Pin4=PD1-OSC_OUT
+Mcu.Pin5=PA2
+Mcu.Pin6=PA3
+Mcu.Pin7=PA4
+Mcu.Pin8=PA5
+Mcu.Pin9=PA6
+Mcu.PinsNb=34
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F103C8Tx
 MxCube.Version=6.6.1
 MxDb.Version=DB.6.0.60
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
+NVIC.DMA1_Channel2_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true\:true
+NVIC.DMA1_Channel3_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true\:true
 NVIC.DMA1_Channel4_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true\:true
 NVIC.DMA1_Channel5_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true\:true
 NVIC.DMA1_Channel6_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true\:true
@@ -96,23 +143,99 @@ NVIC.SavedSvcallIrqHandlerGenerated=true
 NVIC.SavedSystickIrqHandlerGenerated=true
 NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:false\:true\:false\:true\:false
 NVIC.TIM1_UP_IRQn=true\:15\:0\:false\:false\:true\:false\:false\:true\:true
+NVIC.TIM3_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
 NVIC.TimeBase=TIM1_UP_IRQn
 NVIC.TimeBaseIP=TIM1
 NVIC.USART1_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
 NVIC.USART2_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
+NVIC.USART3_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
+PA10.GPIOParameters=GPIO_Label
+PA10.GPIO_Label=RS232_RX
 PA10.Mode=Asynchronous
 PA10.Signal=USART1_RX
+PA11.Locked=true
+PA11.Mode=CTS_RTS
+PA11.Signal=USART1_CTS
+PA12.Locked=true
+PA12.Mode=CTS_RTS
+PA12.Signal=USART1_RTS
+PA13.Locked=true
+PA13.Signal=SYS_JTMS-SWDIO
+PA14.Locked=true
+PA14.Signal=SYS_JTCK-SWCLK
+PA2.GPIOParameters=GPIO_Label
+PA2.GPIO_Label=DEBUG_UART_TX
 PA2.Mode=Asynchronous
 PA2.Signal=USART2_TX
+PA3.GPIOParameters=GPIO_Label
+PA3.GPIO_Label=DEBUG_UART_RX
 PA3.Mode=Asynchronous
 PA3.Signal=USART2_RX
+PA4.Locked=true
+PA4.Signal=SPI1_NSS
+PA5.Locked=true
+PA5.Signal=SPI1_SCK
+PA6.Locked=true
+PA6.Signal=SPI1_MISO
+PA7.Locked=true
+PA7.Signal=SPI1_MOSI
+PA8.GPIOParameters=GPIO_Label
+PA8.GPIO_Label=BACKUP_3V3
+PA8.Locked=true
+PA8.Signal=GPXTI8
+PA9.GPIOParameters=GPIO_Label
+PA9.GPIO_Label=RS232_TX
 PA9.Mode=Asynchronous
 PA9.Signal=USART1_TX
+PB0.GPIOParameters=GPIO_Label
+PB0.GPIO_Label=LED_DATA
+PB0.Locked=true
+PB0.Signal=GPIO_Output
+PB1.GPIOParameters=GPIO_Label
+PB1.GPIO_Label=LED_NW
+PB1.Locked=true
+PB1.Signal=GPIO_Output
+PB10.GPIOParameters=GPIO_Label
+PB10.GPIO_Label=MAIN_UART_TX
+PB10.Mode=Asynchronous
+PB10.Signal=USART3_TX
+PB11.GPIOParameters=GPIO_Label
+PB11.GPIO_Label=MAIN_UART_RX
+PB11.Mode=Asynchronous
+PB11.Signal=USART3_RX
+PB15.GPIOParameters=GPIO_Label
+PB15.GPIO_Label=READY_3V3
+PB15.Locked=true
+PB15.Signal=GPXTI15
+PB2.GPIOParameters=GPIO_Label
+PB2.GPIO_Label=LED_PWR
+PB2.Locked=true
+PB2.Signal=GPIO_Output
+PB4.GPIOParameters=GPIO_Label
+PB4.GPIO_Label=WDT_FEED_3V3
+PB4.Locked=true
+PB4.Signal=GPXTI4
+PB5.GPIOParameters=GPIO_Label
+PB5.GPIO_Label=WDT_RESET
+PB5.Locked=true
+PB5.Signal=GPIO_Output
+PB9.GPIOParameters=GPIO_Label
+PB9.GPIO_Label=HARD_RESET
+PB9.Locked=true
+PB9.Signal=GPIO_Output
 PC13-TAMPER-RTC.GPIOParameters=GPIO_Label
 PC13-TAMPER-RTC.GPIO_Label=LED
 PC13-TAMPER-RTC.Locked=true
 PC13-TAMPER-RTC.Signal=GPIO_Output
+PC14-OSC32_IN.Locked=true
+PC14-OSC32_IN.Signal=RCC_OSC32_IN
+PC15-OSC32_OUT.Locked=true
+PC15-OSC32_OUT.Signal=RCC_OSC32_OUT
+PD0-OSC_IN.Locked=true
+PD0-OSC_IN.Signal=RCC_OSC_IN
+PD1-OSC_OUT.Locked=true
+PD1-OSC_OUT.Signal=RCC_OSC_OUT
 PinOutPanel.RotationAngle=0
 ProjectManager.AskForMigrate=true
 ProjectManager.BackupPrevious=false
@@ -141,7 +264,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_USART1_UART_Init-USART1-false-HAL-true,5-MX_USART2_UART_Init-USART2-false-HAL-true,6-MX_RTC_Init-RTC-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_USART1_UART_Init-USART1-false-HAL-true,5-MX_USART2_UART_Init-USART2-false-HAL-true,6-MX_RTC_Init-RTC-false-HAL-true,7-MX_USART3_UART_Init-USART3-false-HAL-true
 RCC.APB1Freq_Value=8000000
 RCC.APB2Freq_Value=8000000
 RCC.FamilyName=M
@@ -151,10 +274,18 @@ RCC.PLLMCOFreq_Value=4000000
 RCC.TimSysFreq_Value=8000000
 RTC.Format=RTC_FORMAT_BIN
 RTC.IPParameters=Format
+SH.GPXTI15.0=GPIO_EXTI15
+SH.GPXTI15.ConfNb=1
+SH.GPXTI4.0=GPIO_EXTI4
+SH.GPXTI4.ConfNb=1
+SH.GPXTI8.0=GPIO_EXTI8
+SH.GPXTI8.ConfNb=1
 USART1.IPParameters=VirtualMode
 USART1.VirtualMode=VM_ASYNC
 USART2.IPParameters=VirtualMode
 USART2.VirtualMode=VM_ASYNC
+USART3.IPParameters=VirtualMode
+USART3.VirtualMode=VM_ASYNC
 VP_FREERTOS_VS_CMSIS_V2.Mode=CMSIS_V2
 VP_FREERTOS_VS_CMSIS_V2.Signal=FREERTOS_VS_CMSIS_V2
 VP_RTC_No_RTC_Output.Mode=RTC_OUT_NO
@@ -167,5 +298,7 @@ VP_SYS_VS_ND.Mode=No_Debug
 VP_SYS_VS_ND.Signal=SYS_VS_ND
 VP_SYS_VS_tim1.Mode=TIM1
 VP_SYS_VS_tim1.Signal=SYS_VS_tim1
+VP_TIM3_VS_ClockSourceINT.Mode=Internal
+VP_TIM3_VS_ClockSourceINT.Signal=TIM3_VS_ClockSourceINT
 board=custom
 isbadioc=false
