--- a/tm88_dev.ioc
+++ b/tm88_dev.ioc
@@ -99,24 +99,25 @@ Mcu.Pin20=PA11
 Mcu.Pin21=PA12
 Mcu.Pin22=PA13
 Mcu.Pin23=PA14
-Mcu.Pin24=PB4
-Mcu.Pin25=PB5
-Mcu.Pin26=PB9
-Mcu.Pin27=VP_FREERTOS_VS_CMSIS_V2
-Mcu.Pin28=VP_RTC_VS_RTC_Activate
-Mcu.Pin29=VP_RTC_VS_RTC_Calendar
+Mcu.Pin24=PB3
+Mcu.Pin25=PB4
+Mcu.Pin26=PB5
+Mcu.Pin27=PB9
+Mcu.Pin28=VP_FREERTOS_VS_CMSIS_V2
+Mcu.Pin29=VP_RTC_VS_RTC_Activate
 Mcu.Pin3=PD0-OSC_IN
-Mcu.Pin30=VP_RTC_No_RTC_Output
-Mcu.Pin31=VP_SYS_VS_ND
+Mcu.Pin30=VP_RTC_VS_RTC_Calendar
+Mcu.Pin31=VP_RTC_No_RTC_Output
 Mcu.Pin32=VP_SYS_VS_tim1
 Mcu.Pin33=VP_TIM3_VS_ClockSourceINT
+Mcu.Pin34=VP_TIM3_VS_OPM
 Mcu.Pin4=PD1-OSC_OUT
 Mcu.Pin5=PA2
 Mcu.Pin6=PA3
 Mcu.Pin7=PA4
 Mcu.Pin8=PA5
 Mcu.Pin9=PA6
-Mcu.PinsNb=34
+Mcu.PinsNb=35
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F103C8Tx
@@ -161,8 +162,10 @@ PA12.Locked=true
 PA12.Mode=CTS_RTS
 PA12.Signal=USART1_RTS
 PA13.Locked=true
+PA13.Mode=Trace_Asynchronous_SW
 PA13.Signal=SYS_JTMS-SWDIO
 PA14.Locked=true
+PA14.Mode=Trace_Asynchronous_SW
 PA14.Signal=SYS_JTCK-SWCLK
 PA2.GPIOParameters=GPIO_Label
 PA2.GPIO_Label=DEBUG_UART_TX
@@ -212,6 +215,8 @@ PB2.GPIOParameters=GPIO_Label
 PB2.GPIO_Label=LED_PWR
 PB2.Locked=true
 PB2.Signal=GPIO_Output
+PB3.Mode=Trace_Asynchronous_SW
+PB3.Signal=SYS_JTDO-TRACESWO
 PB4.GPIOParameters=GPIO_Label
 PB4.GPIO_Label=WDT_FEED_3V3
 PB4.Locked=true
@@ -264,7 +269,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_USART1_UART_Init-USART1-false-HAL-true,5-MX_USART2_UART_Init-USART2-false-HAL-true,6-MX_RTC_Init-RTC-false-HAL-true,7-MX_USART3_UART_Init-USART3-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_USART1_UART_Init-USART1-false-HAL-true,5-MX_USART2_UART_Init-USART2-false-HAL-true,6-MX_RTC_Init-RTC-false-HAL-true,7-MX_USART3_UART_Init-USART3-false-HAL-true,8-MX_TIM3_Init-TIM3-false-HAL-true
 RCC.APB1Freq_Value=8000000
 RCC.APB2Freq_Value=8000000
 RCC.FamilyName=M
@@ -280,6 +285,9 @@ SH.GPXTI4.0=GPIO_EXTI4
 SH.GPXTI4.ConfNb=1
 SH.GPXTI8.0=GPIO_EXTI8
 SH.GPXTI8.ConfNb=1
+TIM3.IPParameters=Prescaler,Period
+TIM3.Period=799
+TIM3.Prescaler=6399
 USART1.IPParameters=VirtualMode
 USART1.VirtualMode=VM_ASYNC
 USART2.IPParameters=VirtualMode
@@ -294,11 +302,11 @@ VP_RTC_VS_RTC_Activate.Mode=RTC_Enabled
 VP_RTC_VS_RTC_Activate.Signal=RTC_VS_RTC_Activate
 VP_RTC_VS_RTC_Calendar.Mode=RTC_Calendar
 VP_RTC_VS_RTC_Calendar.Signal=RTC_VS_RTC_Calendar
-VP_SYS_VS_ND.Mode=No_Debug
-VP_SYS_VS_ND.Signal=SYS_VS_ND
 VP_SYS_VS_tim1.Mode=TIM1
 VP_SYS_VS_tim1.Signal=SYS_VS_tim1
 VP_TIM3_VS_ClockSourceINT.Mode=Internal
 VP_TIM3_VS_ClockSourceINT.Signal=TIM3_VS_ClockSourceINT
+VP_TIM3_VS_OPM.Mode=OPM_bit
+VP_TIM3_VS_OPM.Signal=TIM3_VS_OPM
 board=custom
 isbadioc=false
